apps/home-assistant/zigbee2mqtt/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: zigbee2mqtt
  name: zigbee2mqtt-ui
spec:
  ports:
    - name: zigbee2mqtt
      port: 8080
      targetPort: http
      protocol: TCP
  selector:
    app: zigbee2mqtt
