apps/home-assistant/zigbee2mqtt/HTTPRoute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zigbee2mqtt
  labels:
    app.kubernetes.io/instance: home-assistant
spec:
  parentRefs:
  - name: gateway
    namespace: kube-system
  hostnames:
  - "zigbee2mqtt.camsab.local"
  rules:
  - backendRefs:
    - name: zigbee2mqtt
      port: 8080
