apps/home-assistant/zigbee2mqtt/IngressRoute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: zigbee2mqtt-ui
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`zigbee2mqtt.sabby`)
      services:
        - name: zigbee2mqtt-ui
          port: 8080
          scheme: http
